# yab-world

./: .gitignore  Cargo.toml  README.md  blocks_tmp.txt  config.json
assets/: blocks.json
assets/atlas/: blocks.json
assets/shaders/: deferred.vert  particle.frag  particle.vert  primitive.frag  skydome.vert  textured.vert  translucent.frag  ui.vert
client/: Cargo.toml  build.rs
client/assets/atlas/: blocks.json
client/assets/shaders/: block.frag  block.vert  deferred.frag  primitive.vert  simple.frag  simple.vert  skydome.frag  sprite.frag  sprite.vert  text.frag  text.vert  textured.frag  translucent.frag  translucent.vert
client/src/: block_button.rs  block_preview_generator.rs  block_select.rs  client_config.rs  game_context.rs  in_game.rs  join_game.rs  lib.rs  load_game.rs  main_menu.rs  new_game.rs  settings.rs  start_game.rs
client/src/gui/: block_button.rs  button.rs  gui_renderer.rs  image_button.rs  label.rs  mod.rs  profile_chart.rs  progress_bar.rs  selector.rs  text_field.rs
client/src/physics/: mod.rs  physics.rs  physicsobject.rs
client/src/render/: block_mesh.rs  block_mesher.rs  block_render.rs  crosshair.rs  deferred.rs  mesh.rs  mod.rs  skydome.rs  worldmesher.rs
client/src/world/: light.rs  mod.rs  worldhandler.rs
common/: Cargo.toml
common/src/: daynight.rs  interpolate.rs  inventory.rs  lib.rs  player.rs  resource.rs  world_definition.rs  world_pos.rs  world_type.rs
common/src/block/: block.rs  blockregistry.rs  mod.rs
common/src/chunk/: chunk.rs  chunk_buffer.rs  chunkcolumn.rs  chunkpos.rs  mod.rs
common/src/comms/: comms.rs  messages.rs  mod.rs  read_from.rs  rle.rs  write_to.rs
data/: blocks.json
gamework/: Cargo.toml
gamework/gl/: Cargo.toml  build.rs
gamework/gl/src/: lib.rs
gamework/render_derive/: Cargo.toml
gamework/render_derive/src/: lib.rs
gamework/src/: app.rs  assets.rs  audio.rs  flat_grid.rs  input.rs  lib.rs  profile.rs  system_context.rs
gamework/src/gui/: grid.rs  input.rs  mod.rs  position.rs  size.rs  value.rs  widget.rs
gamework/src/state/: mod.rs  state.rs  state_manager.rs
gamework/src/video/: buffer.rs  camera.rs  color.rs  data.rs  framebuffer.rs  gl_utils.rs  mesh.rs  mod.rs  particles.rs  primitive_render.rs  shader.rs  sprite_batcher.rs  text.rs  texture.rs  texture_array.rs  texture_atlas.rs
server/: Cargo.toml
server/src/: client.rs  lib.rs  player_store.rs  server_world_handler.rs  superchunk.rs  world_generator.rs  world_store.rs
server/src/generator/: alien_generator.rs  chunk_generator.rs  column_generator.rs  flat_generator.rs  hills_generator.rs  mod.rs  noise_source.rs  water_generator.rs  world_generator.rs
server/src/generator/generators/: alien_generator.rs  flat_generator.rs  hills_generator.rs  mod.rs  water_generator.rs
server/src/generator/object_generator/: mod.rs  tower_generator.rs  tree_generator.rs
server/src/generator/object_placer/: mod.rs  tower_placer.rs  tree_placer.rs
server/src/object_placer/: mod.rs
server_data/: blocks.json
src/: main.rs
