[package]
name = "client"
version = "0.1.0"
authors = ["Bas <b.vanschoonhoven@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
gamework = { path = "../gamework" }
server = { path = "../server" }
egui = "0.19.0"
nalgebra-glm = "0.10.0"
failure = "0.1.3"
rand = "0.7.3"
noise = "0.5.1"
num_cpus = "1.10.0"
threadpool = "1.0"
image = "0.23.4"
log = "0.4.8"
tobj = "2.0.2"
floating-duration = "0.1.2"
crossbeam = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"

[build-dependencies]
walkdir = "2.1"
