[package]
name = "common"
version = "0.1.0"
authors = ["Bas <b.vanschoonhoven@gmail.com>"]
edition = "2018"

[dependencies]
gamework = { path = "../gamework" }
failure = "0.1.3"
nalgebra-glm = "0.10.0"
log = "0.4.8"
crossbeam = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
palette = "0.5.0"
