[package]
name = "gamework"
version = "0.1.0"
authors = ["Bas <b.vanschoonhoven@gmail.com>"]
edition = "2018"

[dependencies]
gl = { path = "gl" }
render_derive = { path = "render_derive" }
glutin = "0.27.0"
failure = "0.1.3"
nalgebra-glm = "0.10.0"
image = "0.23.4"
log = "0.4.8"
fontdue = "0.6.2"
floating-duration = "0.1.2"
half = "1.1.1"
vec-2-10-10-10 = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
circular-queue = "0.2.4"
texture_packer = "0.22.0"
rodio = "0.15.0"
rand = "0.7.3"
noise = "0.7.0"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]
