[package]
name = "server"
version = "0.1.0"
authors = ["Bas <b.vanschoonhoven@gmail.com>"]
edition = "2018"

[dependencies]
gamework = { path = "../gamework" }
common = { path = "../common" }
nalgebra-glm = "0.10.0"
rand = "0.7.3"
noise = "0.7.0"
num_cpus = "1.10.0"
threadpool = "1.0"
log = "0.4.8"
snap = "1.0.0"
crossbeam = "0.7.3"
floating-duration = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
priority-queue = "1.1.1"
